// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : State : State grade renders correctly 1`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current
     
    <a
      href="/about-data#state-data-quality-grades"
    >
      data grade
    </a>
    :
  </span>
  <img
    alt="Grade a"
    src="test-file-stub"
    width="28px"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 2`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current
     
    <a
      href="/about-data#state-data-quality-grades"
    >
      data grade
    </a>
    :
  </span>
  <img
    alt="Grade A+"
    src="test-file-stub"
    width="28px"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 3`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current
     
    <a
      href="/about-data#state-data-quality-grades"
    >
      data grade
    </a>
    :
  </span>
  <img
    alt="Grade na"
    src="test-file-stub"
    width="28px"
  />
</p>
`;
